--- a/app/src/main/res/layout/activity_add_data.xml
+++ b/app/src/main/res/layout/activity_add_data.xml
@@ -5,16 +5,27 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:padding="16dp"
-    tools:context=".ui.input.InputDataActivity">
+    tools:context=".ui.data.add.AddDataActivity">
+
+    <EditText
+        android:id="@+id/editTextNim"
+        android:layout_width="0dp"
+        android:layout_height="wrap_content"
+        android:hint="NIM"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintStart_toStartOf="parent"
+        app:layout_constraintTop_toTopOf="parent" />
 
     <EditText
         android:id="@+id/editTextNama"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
         android:hint="Nama"
+        android:focusable="false"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toBottomOf="@id/editTextNim"
+        android:layout_marginTop="16dp"/>
 
     <EditText
         android:id="@+id/editTextTanggalLahir"
