--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -32,6 +32,7 @@
         android:layout_marginBottom="32dp">
 
         <androidx.cardview.widget.CardView
+            android:id="@+id/viewDataCardView"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:layout_marginBottom="16dp"
@@ -56,10 +57,9 @@
                     android:text="Lihat Data"
                     android:textSize="18sp"
                     android:layout_marginStart="16dp" />
-
             </LinearLayout>
-
         </androidx.cardview.widget.CardView>
+
 
         <androidx.cardview.widget.CardView
             android:id="@+id/addDataCardView"
